fix: gif footer overflow on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -50,6 +50,7 @@
 
 .gif {
     margin-top: 2rem;
+    width: 100%;
     max-width: 400px;
     margin-inline: auto;
 }
